tests/paczka1/fuzzy1/17628932.err
Error in line 2: GAo A312 77,5
Error in line 9: PVC S510 -1,2
Error in line 13: S9;9 S510 ;;,6
Error in line 15: wVsEcHr A480 24,4
Error in line 1: PVC S510 26,5
Error in line 19: S949 S510 199,8
Error in line 28: wVsEcHr S949 48,2
Error in line 31: wVsEcHr A480 49,6
Error in line 34: PVC A312 333,89
Error in line 33: wVsEcHr S949 99,3
